# birdy-app

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: backend-tests.yml
Application/Backend/: .env.sample  .gitignore  .watchfiles.toml  app.py  config.py  main.py  pyproject.toml  requirements.txt
Application/Backend/database/: db_schema.py  patch_migration.py
Application/Backend/migrations/models/: 1_20250607174409_add user table.py  2_20250607185029_add username on user table.py
Application/Backend/models/: auth.py  user.py
Application/Backend/routes/: account.py  auth.py  core.py
Application/Backend/services/: account_service.py  auth_service.py  oAuth.py
Application/Backend/tests/: test_app.py  test_main.py
Application/Backend/tests/database/: test_patch_migration.py
Application/Backend/tests/routes/: test_account.py  test_auth_login.py  test_auth_signup.py
Application/Backend/tests/services/: test_oAuth.py  (+2 more)
Application/Backend/utils/: argon2id.py  jwt.py
Application/MobileApp/: .eslintrc.js  .prettierrc  README.md  app.json  babel.config.js  metro.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_gradio_class.py  test_gradio_det.py  tsconfig.json
Application/MobileApp/app/: app.tsx  constants.tsx
Application/MobileApp/modules/bird-inference-native/android/src/main/cpp/: BirdDetection.cpp  CMakeLists.txt  HybridBirdDetector.cpp  HybridBirdDetector.hpp  birdinference_native.cpp
Application/MobileApp/patch/: axios_package.json.patch  cmd.sh  react-performance.patch
Application/MobileApp/patches/: axios.patch
Application/MobileApp/plugins/: withAndroidGPULibrary.ts
Bird Object Detection/Training/: .gitignore  cleans.py  cocotest.py  convert.py  convert_coco_to_yolo.py  convert_yolo_to_coco.py  export.py  infer.py  infer_tflite.py  nhcw.ipynb  requirements.txt  test.py  train.py
Bird Species Classification/Scrape Dataset/: .gitignore  bird_species.py  inaturalist_scrape.py  moves.py  playwright_scrape.py
Bird Species Classification/Training/: .gitignore  config.py  convert.py  convert_py  export.ipynb  infer.py  label_mapping.csv  labels.js  model.py  onnx_infer.py  quant.ipynb  requirements.txt  train.ipynb  train.py  upload_dataset.py
Bird Species Classification/Training/pickle/: label_encoder.pkl  split_indices.pkl
(+86 files in other folders)
